--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "URLhaus",
-  "version": "3.2.10",
+  "version": "3.2.11",
   "main": "./integration.js",
   "private": true,
   "scripts": {
     "test": "jest"
   },
   "dependencies": {
-    "async": "^3.2.0",
+    "async": "^3.2.4",
     "bottleneck": "^2.19.5",
-    "jest": "^27.2.4",
-    "lodash": "^4.17.19",
-    "nock": "^13.1.3",
-    "postman-request": "^2.88.1-postman.31"
+    "lodash": "^4.17.21",
+    "postman-request": "^2.88.1-postman.32"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "nock": "^13.3.3"
   }
 }
